# GLPR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lpr.sh
0_locateLP/: CMakeLists.txt  locateLP.cpp
0_locate_lp/: CMakeLists.txt  main.cpp
1_text_isolation/: CMakeLists.txt  Makefile  main.cpp
2_character_segmentation/: CMakeLists.txt  Makefile  main.cpp
2_morphology_normalization/: CMakeLists.txt  main.cpp
3_character_segmentation/: CMakeLists.txt  main.cpp
3_ocr/: main.cpp  makefile
4_ocr/: CMakeLists.txt  main.cpp
HLS_dev/prj/: .cproject  .project
HLS_dev/prj/.apc/: autopilot.apfmapping
HLS_dev/prj/solution1/: script.tcl  solution1.aps
HLS_dev/prj/solution1/.autopilot/: .autopilot_exit
HLS_dev/prj/solution1/.autopilot/db/: hls_filters.pp.0.cpp.ap-line.cpp.CXX  image_filter.pp.0.cpp  image_filter.pp.0.cpp.ap-line.cpp.CXX  image_filter.pragma.0.cpp  image_filter.pragma.0.cpp.ap-line.CXX  image_filter.pragma.1.cpp  image_filter.pragma.2.cpp  image_filter.rtl_wrap.cfg.tcl  pragma.0.directive  pragma.1.directive  ve_warning.tcl
HLS_dev/prj/src/: filter.h  hls_filters.cpp  image_filter.cpp  test.cpp
scripts/: arm-clean-build.sh  arm-xcompile.sh  clean_cmake_files.sh  lpr.sh  lpr_clear_tmp.sh  zedboard.make
